--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,9 +1,7 @@
-#FROM  node:alpine
 FROM node:14.14.0-alpine
 WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
 #RUN npm audit fix --force
 COPY . .
-# dev refer to package.json
-CMD ["npm","run","dev"]
+CMD ["npm","run","start"]
