--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: 'ap-southeast-1'
-  app: 'multi-docker'
-  env: 'Multidocker-env'
+  app: 'multi-docker1'
+  env: 'Multidocker1-env'
   bucket_name: 'elasticbeanstalk-ap-southeast-1-902275624112'
   bucket_path: 'docker-multi'
   on:
